feat: design tradeoffs

--- a/Kristelle/final_report.bib
+++ b/Kristelle/final_report.bib
@@ -782,8 +782,20 @@
 	month = may,
 	year = {2022},
 	note = {arXiv:2108.02569 [cs]},
-	keywords = {Computer Science - Distributed, Parallel, and Cluster Computing, Computer Science - Hardware Architecture, Computer Science - Machine Learning},
+	keywords = {Computer Science - Hardware Architecture, Computer Science - Machine Learning, Computer Science - Distributed, Parallel, and Cluster Computing},
 	pages = {102466},
 	annote = {Comment: Submitted for the journal review},
 	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\6QBWE5MN\\Tiwari et al. - 2022 - Data Streaming and Traffic Gathering in Mesh-based NoC for Deep Neural Network Acceleration.pdf:application/pdf},
+}
+
+@inproceedings{wang_rethinking_2017,
+	address = {Guangzhou, China},
+	title = {Rethinking {Energy}-{Efficiency} of {Heterogeneous} {Computing} for {CNN}-{Based} {Mobile} {Applications}},
+	isbn = {978-1-5386-3790-6},
+	booktitle = {2017 {IEEE} {International} {Symposium} on {Parallel} and {Distributed} {Processing} with {Applications} and 2017 {IEEE} {International} {Conference} on {Ubiquitous} {Computing} and {Communications} ({ISPA}/{IUCC})},
+	publisher = {IEEE},
+	author = {Wang, Zhen and Li, Xi and Wang, Chao and Cheng, Zhinan and Song, Jiachen and Zhou, Xuehai},
+	month = dec,
+	year = {2017},
+	file = {PDF:C\:\\Users\\iamkr\\Zotero\\storage\\SH3E4TIK\\2017 - [No title found].pdf:application/pdf},
 }
